--- a/swig/python/Makefile
+++ b/swig/python/Makefile
@@ -7,31 +7,29 @@
 CFLAGS = -Wall -g -O0 -fPIC 
 
 OBJS = $(patsubst %.c,%.o,$(wildcard *.c))
+
 DEPENDS = .depend
 
-INCLUDE_PATH = -I. -I../../include/ -I../utils/ -I/usr/include/python2.7 
+INCLUDE_PATH = -I. -I../../include/ -I../../utils/ -I/usr/include/python2.7 
 CFLAGS +=  $(INCLUDE_PATH) 
 
 
 SHLIB = _RobotApi.so
 
 LIBS = $(SHLIB)
-LDFLAGS += -shared -L../libs/robotlogstr -lrobotlogstr -L../libs/json -ljson -L../utils/ -lrobotmsg
+LDFLAGS += -shared -L../../libs/robotlogstr -lrobotlogstr -L../../libs/json -ljson -L../../utils/ -lrobotutils
 
 
-all:swig $(SHLIB)
+all: $(SHLIB)
 	
 ECHO:
 	@echo $(SUBDIRS)	
 	
-swig:
-	@cp ../../sdk/RobotApi.c ./
-	swig -python RobotApi.i
 
 $(SHLIB):$(OBJS)
 	$(CC) $(LDFLAGS) -o $@ $(OBJS)
 
 clean:
 	rm -f $(OBJS) $(LIBS) $(DEPENDS)
-
+	rm -f *.py *.c 
 	
