--- a/swig/Makefile
+++ b/swig/Makefile
@@ -14,6 +14,7 @@ all: python_swig $(SUBDIRS)
 
 python_swig:
 	@cp ../src/RobotApi.c python/
+	@cp ../src/RobotApi.h python/
 	@swig -python python/RobotApi.i
 
 $(SUBDIRS):ECHO
