--- a/swig/python/Makefile
+++ b/swig/python/Makefile
@@ -2,14 +2,14 @@
 #ROOTDIR definition must be placed before include 
 
 CFLAGS = -Wall -g -O0 -fPIC 
-SOURCES = RobotApi.c RobotApi_wrap.c
-#OBJS = $(patsubst %.c,%.o,$(wildcard *.c))
-OBJS = $(SOURCES:.c=.o)
+
+OBJS = $(patsubst %.c,%.o,$(wildcard *.c))
 
 DEPENDS = .depend
 
 INCLUDE_PATH = -I. -I../../include/ -I../../utils/ -I/usr/include/python2.7 
-CFLAGS += $(INCLUDE_PATH) 
+CFLAGS +=  $(INCLUDE_PATH) 
+
 
 SHLIB = _RobotApi.so
 
@@ -19,13 +19,11 @@ LDFLAGS += -shared -L../../libs/robotlogstr -lrobotlogstr -L../../libs/json -ljs
 
 all: $(SHLIB)
 	
-%.o:%.c
-	$(CC) $(CFLAGS) -c $^ -o $@
-	
+
 $(SHLIB):$(OBJS)
-	$(LD) $(LDFLAGS) -o $@ $(OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(OBJS)
 
 clean:
 	rm -f $(OBJS) $(LIBS) $(DEPENDS)
-	rm -f *.py *.c
+	rm -f *.py *.c *.h
 	
