--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,5 +1,6 @@
 #Makefile
-CFLAGS = -Wall -ggdb -g3 -fPIC
+CFLAGS = -Wall -g -O0 -fPIC 
+
 
 SOURCES = RobotMsg.c RobotMsgQueue.c
 
@@ -7,20 +8,25 @@ OBJS = $(SOURCES:.c=.o)
 DEPENDS = .depend
 
 INCLUDE_PATH = -I. -I../include
-CFLAGS +=  $(INCLUDE_PATH) 
-LDFLAGS = -shared
+CFLAGS +=  $(INCLUDE_PATH)
 
 SHLIB = librobotutils.so
+
 LIBS = $(SHLIB)
+LDFLAGS= -shared -L../libs/robotlogstr -lrobotlogstr -L../libs/json -ljson 
 
-all: $(SHLIB)
+
+all:$(SHLIB)
+
 	
-(OBJS):
-	$(CC) $(CFLAGS) -c -o $@ $(OBJS) -lm
+ECHO:
+	@echo $(SUBDIRS)	
+	
+$(SHLIB):$(OBJS)
+	$(CC) $(LDFLAGS) -o $@ $(OBJS)
 
-$(SHLIB): $(OBJS)
-	$(LD) $(LDFLAGS) -o $@ $(OBJS)
-
+doxygen:
+	@doxygen Dexygen
 
 clean:
 	rm -f $(OBJS) $(LIBS) $(DEPENDS)
