--- a/libs/json/Makefile
+++ b/libs/json/Makefile
@@ -7,7 +7,7 @@ OBJS = $(SOURCES:.c=.o)
 DEPENDS = .depend
 
 INCLUDE_PATH = -I. -I../../include
-CFLAGS += $(INCLUDE_PATH) 
+CFLAGS +=  $(INCLUDE_PATH) 
 
 ARFLAGS = -rv
 
@@ -18,14 +18,8 @@ LDFLAGS += -shared -fPIC
 
 all: $(SHLIB)
 	
-#$(SHLIB):$(OBJS)
-#	$(CC)  $(LDFLAGS) -Wall -g -O0 -o $@ $(OBJS) -lm
-%.o:%.c
-	$(CC) $(CFLAGS) -c $^ -o $@
-
-$(SHLIB): $(OBJS)
-	$(LD) $(LDFLAGS) -o $@ $(OBJS)
-
+$(SHLIB):$(OBJS)
+	$(CC)  $(LDFLAGS) -Wall -g -O0 -o $@ $(OBJS) -lm
 
 clean:
 	rm -f $(OBJS) $(LIBS) $(DEPENDS)
