--- a/libs/robotlogstr/Makefile
+++ b/libs/robotlogstr/Makefile
@@ -1,33 +1,29 @@
 #Makefile
 CFLAGS = -Wall -ggdb -g3 -fPIC
 
-SOURCES = robotlogstr.c
-
+SOURCES = robotlogstr.c 
 OBJS = $(SOURCES:.c=.o)
 DEPENDS = .depend
 
 INCLUDE_PATH = -I. -I../../include
 CFLAGS +=  $(INCLUDE_PATH) 
 
+CFLAGS +=  $(INCLUDE_PATH)
 ARFLAGS = -rv
 
 SHLIB = librobotlogstr.so
+
 LIBS = $(SHLIB)
 
 LDFLAGS += -shared -fPIC
 
 all: $(SHLIB)
 	
-#$(SHLIB):$(OBJS)
-#	$(CC)  $(LDFLAGS) -Wall -g -O0 -o $@ $(OBJS) -lm
-%.o:%.c
-	$(CC) $(CFLAGS) -c $^ -o $@
-
-$(SHLIB): $(OBJS)
-	$(LD) $(LDFLAGS) -o $@ $(OBJS)
-
+$(SHLIB):$(OBJS)
+	$(CC)  $(LDFLAGS) -Wall -g -O0 -o $@ $(OBJS)
 
 clean:
 	rm -f $(OBJS) $(LIBS) $(DEPENDS)
+
 
 	
